
    o	Standalone Rmath now has a get_seed function as requested (PR#3160). 

    o	? and help() will accept more un-quoted arguments, e.g. NULL. 

    o	When coercion of a list fails, a meaningful error message is given.

    o	Subscripting data-frames with a single argument now ignores any
	`drop' argument (with a warning).  Previously using `drop'
	inhibited list-like subscripting.


DEPRECATED & DEFUNCT

    o	The assignment operator `_' has been removed.

    o	printNoClass() is defunct.

    o	The classic MacOS port is no longer supported, and its files
	have been removed from the sources.

    o	print.coefmat() is deprecated in favour of printCoefmat()
	(which is identical apart from the default for na.print which
	is changed from "" to "NA").

    o	codes() and codes<-() are deprecated, as almost all uses
	misunderstood what they actually do.

    o	The use of multi-argument return() calls is deprecated: use a
	(named) list instead.

    o	anovalist.lm (replaced in 1.2.0) is now deprecated.

    o	The deprecated argument 'white' of parse() has been removed.


INSTALLATION CHANGES

    o	The zlib code in the sources is used unless the external
	version found is at least version 1.1.4 (up from 1.1.3).

    o	The regression checks now have to be passed exactly.

    o	There are new macros DYLIB_* for building dynamic libraries,
	and these are used for the dynamic Rmath library (which was
	previously built as a shared object).


UTILITIES

    o	R CMD build excludes possible (obsolete) data and vignette
        indices in DCF format (and hence also no longer rebuilds them).

    o	R CMD check now tests whether file names are valid across file
	systems and supported operating system platforms.  Replacement
	functions and S3 methods in \usage sections are no longer
	ignored.

    o	R CMD Rdindex has been removed.


BUG FIXES

    o	pnorm(x, 1, 0) does not give NaN anymore;
	also, pnorm(x, m, s=Inf) == lim{s -> Inf} pnorm(x,m,s).