@@ -2351,6 +2351,67 @@ Coefficients:
 > ## not quite ok previous to 1.7.0
 > 
 > 
+> ## str() for character & factors with NA (levels), and for Surv objects:
+> ff <- factor(c(2:1,  NA),  exclude = NULL)
+> str(levels(ff))
+ chr [1:3] "1" "2" NA
+> str(ff)
+ Factor w/ 3 levels "1","2",NA: 2 1 3
+> str(ordered(ff, exclude=NULL))
+ Ord.factor w/ 3 levels "1"<"2"<NA: 2 1 3
+> if(require(survival)) {
++     data(aml)
++     (sa <- Surv(aml$time, aml$status))
++     str(sa)
++     detach("package:survival")
++ }
+Loading required package: survival 
+ Surv [1:23, 1:2]  9  13  13+ 18  23  28+ 31  34  45+ 48  ...
+ - attr(*, "dimnames")=List of 2
+  ..$ : NULL
+  ..$ : chr [1:2] "time" "status"
+ - attr(*, "type")= chr "right"
+> ## were different, the last one failed in 1.6.2 (at least)
+> 
+> 
+> ## PR#3058  printing with na.print and right=TRUE
+> a <- matrix( c(NA, "a", "b", "10",
++                NA, NA,  "d", "12",
++                NA, NA,  NA,  "14"),
++             byrow=T, ncol=4 )
+> print(a, right=TRUE, na.print=" ")
+     [,1] [,2] [,3] [,4]
+[1,]       "a"  "b" "10"
+[2,]            "d" "12"
+[3,]                "14"
+> print(a, right=TRUE, na.print="----")
+     [,1] [,2] [,3] [,4]
+[1,] ----  "a"  "b" "10"
+[2,] ---- ----  "d" "12"
+[3,] ---- ---- ---- "14"
+> ## misaligned in 1.7.0
+> 
+> 
+> ## assigning factors to dimnames
+> A <- matrix(1:4, 2)
+> aa <- factor(letters[1:2])
+> dimnames(A) <- list(aa, NULL)
+> A
+  [,1] [,2]
+a    1    3
+b    2    4
+> dimnames(A)
+[[1]]
+[1] "a" "b"
+
+[[2]]
+NULL
+
+> ## 1.7.0 gave internal codes as display and dimnames()
+> ## 1.7.1beta gave NAs via dimnames()
+> ## 1.8.0 converts factors to character
+> 
+> 
 > ## wishlist PR#2776: aliased coefs in lm/glm
 > set.seed(123)
 > x2 <- x1 <- 1:10
@@ -2431,24 +2492,6 @@ x1 -0.91
 x3  0.81       -0.97
 
 > ## omitted silently in summary.glm < 1.8.0
-> 
-> 
-> ## PR#3058  printing with na.print and right=TRUE
-> a <- matrix( c(NA, "a", "b", "10",
-+                NA, NA,  "d", "12",
-+                NA, NA,  NA,  "14"),
-+             byrow=T, ncol=4 )
-> print(a, right=TRUE, na.print=" ")
-     [,1] [,2] [,3] [,4]
-[1,]       "a"  "b" "10"
-[2,]            "d" "12"
-[3,]                "14"
-> print(a, right=TRUE, na.print="----")
-     [,1] [,2] [,3] [,4]
-[1,] ----  "a"  "b" "10"
-[2,] ---- ----  "d" "12"
-[3,] ---- ---- ---- "14"
-> ## misaligned in 1.7.0
 > 
 > 
 > ## list-like indexing of data frames with drop specified
